--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="styles/styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="My name is Cage Joos and this is my homepage which introduces me.">
+    <meta name="author" content="Cage Joos">
     <title>Cage Joos | WDD 130</title>
   </head>
   <body>
@@ -17,6 +19,11 @@
         <h1>Cage Joos | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Cage Joos" width="200">
         <p>Hello! My name is Cage Joos and I am from Rexburg, Idaho. I enjoy watching and playing sports! </p>
+        <aside>
+          <h2>Idaho</h2>
+          <img src="images/idaho.webp" alt="Idaho State Flag">
+          <p>Idaho is a state that is known for many potatoes and how delicious they are.</p>
+        </aside>
       </main>
       <footer>
         <p>©️2024 Cage Joos, Rexburg, Idaho</p>
