--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header>
       <main>
         <h1>Cage Joos | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Cage Joos" width="200">
+        <img src="images/profile.webp" alt="Hello, my name is Cage Joos" width="200">
         <p>Hello! My name is Cage Joos and I am from Rexburg, Idaho. I enjoy watching and playing sports! </p>
         <aside>
           <h2>Idaho</h2>
