Added description and author

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
     <link rel="preconnect" href="https://fonts.google.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.google.com/css2?family=Libre Baskerville:wght@400;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="description" content="This is my page that tells about the whitewater rafting business.">
+    <meta name="author" content="Cage Joos">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
