--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles/rafting.css">
-    <link rel="preconnect" href="https://fonts.google.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.google.com/css2?family=LibreBaskerville:wght@400;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="This is my page that tells about the whitewater rafting business.">
     <meta name="author" content="Cage Joos">
     <meta charset="UTF-8">
