--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
 <head>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="This is my page that tells about the whitewater rafting business.">
     <meta name="author" content="Cage Joos">
     <meta charset="UTF-8">
@@ -15,10 +15,10 @@
     <header>
         <img src="images/whitewaterlogo.png" alt="logo" width="200">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="index.html" id="home">Home</a>
+            <a href="about.html" id="about">About Us</a>
+            <a href="trips.html" id="trips">Trips</a>
+            <a href="contact.html" id="contact">Contact Us</a>
         </nav>
     </header>
     <main>
@@ -30,30 +30,36 @@
             </article>
             <img src="images/hero.jpg" alt="hero">
         </div>
-        <section>
+        <section id="section1">
             <h2>History</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tempore?</p>
+            <p id="words1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tempore?</p>
+            <p id="words2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tempore?</p>
         </section>
-        <section>
+        <section id="section2">
             <h2>Adventure Awaits You!</h2>
             <img src="images/rapidsrafting.jpg" alt="rafting" id="image1">
+            <p id="rapids">River</p>
             <img src="images/bigrapids.webp" alt="rapids" id="image2">
-            <img src="images/ram.jpg" alt="ram" id="image3">
-            <img src="images/waterfall.webp" alt="waterfall" id="image4">
+            <p id="bigrapids">Big Rapids</p>
+            <img src="images/waterfall.webp" alt="waterfall" id="image3">
+            <p id="waterfall">Waterfall</p>
+            <img src="images/ram.jpg" alt="ram" id="image4">
+            <p id="ram">Ram</p>
             <img src="images/lizard.jpg" alt="lizard" id="image5">
+            <p id="lizard">Lizard</p>
         </section>
     </main>
     <footer>
         <p>©, 2024, Whitewater Rapids, Cage Joos</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
-                <img src="images/facebooklogo.webp" alt="Facebook">
+                <img src="images/facebooklogo.webp" alt="Facebook" id="facebook">
             </a>
             <a href="https://x.com">
-                <img src="images/xlogo.webp" alt="X">
+                <img src="images/xlogo.webp" alt="X" id="x">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagramlogo.webp" alt="Instagram">
+                <img src="images/instagramlogo.webp" alt="Instagram" id="instagram">
             </a>
         </nav>
     </footer>
