--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,16 +37,26 @@
         </section>
         <section id="section2">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rapidsrafting.jpg" alt="rafting" id="image1">
-            <p id="rapids">River</p>
-            <img src="images/bigrapids.webp" alt="rapids" id="image2">
-            <p id="bigrapids">Big Rapids</p>
-            <img src="images/waterfall.webp" alt="waterfall" id="image3">
-            <p id="waterfall">Waterfall</p>
-            <img src="images/ram.jpg" alt="ram" id="image4">
-            <p id="ram">Ram</p>
-            <img src="images/lizard.jpg" alt="lizard" id="image5">
-            <p id="lizard">Lizard</p>
+            <figure id="image1">
+                <img src="images/rapidsrafting.jpg" width="200px" height="auto" alt="rafting">
+                <figcaption id="rapids">River</figcaption>
+            </figure>
+            <figure id="image2">
+                <img src="images/bigrapids.webp" width="200px" height="auto" alt="rapids">
+                <figcaption id="bigrapids">Big Rapids</figcaption>
+            </figure>
+            <figure id="image3">
+                <img src="images/waterfall.webp" width="200px" alt="waterfall">
+                <figcaption id="waterfall">Waterfall</figcaption>
+            </figure>
+            <figure id="image4">
+                <img src="images/ram.jpg" width="200px" alt="ram">
+                <figcaption id="ram">Ram</figcaption>
+            </figure>
+            <figure id="image5">
+                <img src="images/lizard.jpg" width="200px" alt="lizard">
+                <figcaption id="lizard">Lizard</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
