--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Cage Joos">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Whitewater Rapids About Us Page</title>
 </head>
 <body>
     <header>
