--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,23 +38,23 @@
         <section id="section2">
             <h2>Adventure Awaits You!</h2>
             <figure id="image1">
-                <img src="images/rapidsrafting.jpg" width="200px" height="auto" alt="rafting">
+                <img src="images/rapidsrafting.jpg" width="200" alt="rafting">
                 <figcaption id="rapids">River</figcaption>
             </figure>
             <figure id="image2">
-                <img src="images/bigrapids.webp" width="200px" height="auto" alt="rapids">
+                <img src="images/bigrapids.webp" width="200" alt="rapids">
                 <figcaption id="bigrapids">Big Rapids</figcaption>
             </figure>
             <figure id="image3">
-                <img src="images/waterfall.webp" width="200px" alt="waterfall">
+                <img src="images/waterfall.webp" width="200" alt="waterfall">
                 <figcaption id="waterfall">Waterfall</figcaption>
             </figure>
             <figure id="image4">
-                <img src="images/ram.jpg" width="200px" alt="ram">
+                <img src="images/ram.jpg" width="200" alt="ram">
                 <figcaption id="ram">Ram</figcaption>
             </figure>
             <figure id="image5">
-                <img src="images/lizard.jpg" width="200px" alt="lizard">
+                <img src="images/lizard.jpg" width="200" alt="lizard">
                 <figcaption id="lizard">Lizard</figcaption>
             </figure>
         </section>
