--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
     <main>
         <div class="contact-page">
             <h4>Contact Us</h4>
-            <h3>Send Us a Message</h3>
+            <h1 id="send">Send Us a Message</h1>
             <p id="business-name">White Water Rafting</p>
             <p id="phone">Phone: (999) 999-9999</p>
             <p id="email">Email: <a href="mailto:">youremail@gmail.com</a></p>
