--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,9 +47,9 @@
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <label for="browser">What is the purpose of this message?</label>
+                <label for="message">What is the purpose of this message?</label>
                 <div class="form-item column1">
-                    <label for="Inquiry">General Inquiry</label>
+                    <label for="inquiry">General Inquiry</label>
                     <input type="radio" id="inquiry" name="inquiry">
                     <label for="question">Reservation Question</label>
                     <input type="radio" id="question" name="question">
