--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -47,7 +47,7 @@
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <label for="message">What is the purpose of this message?</label>
+                <label>What is the purpose of this message?</label>
                 <div class="form-item column1">
                     <label for="inquiry">General Inquiry</label>
                     <input type="radio" id="inquiry" name="inquiry">
